# basalt-headers

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt
cmake/: basalt-headersConfig.cmake.in
include/basalt/camera/: pinhole_radtan8_camera.hpp
include/basalt/image/: image.h
include/basalt/imu/: preintegration.h
include/basalt/serialization/: headers_serialization.h
scripts/: clang-format-all.sh
test/: CMakeLists.txt
test/src/: test_camera.cpp  test_image.cpp
